MD02-1873: Add jwt properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.data.rest.base-path=/api
 
 # Remove whitelabel pages
 server.error.whitelabel.enabled=false
+
+# JWT properties
+jwt.secret=bpFWxtAuCX2trFvwikR1dVqSBVpcS9We
+jwt.jwtExpirationMs=3600000
