MD02-1873: Add application version and description

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,7 @@ server.error.whitelabel.enabled=false
 # JWT properties
 jwt.secret=bpFWxtAuCX2trFvwikR1dVqSBVpcS9We
 jwt.jwtExpirationMs=3600000
+
+# OpenAPI Bearer Authorization
+app-version=1.0.0-SNAPSHOT
+app-description=Logging system for tracking and submitting work time
