MD02-1873: Change application base path property

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 # Set base path to /api
-spring.data.rest.base-path=/api
+server.servlet.context-path=/api
 
 # Remove whitelabel pages
 server.error.whitelabel.enabled=false
