--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,13 +6,21 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 # Set base path to /api
-spring.data.rest.base-path=/api
+server.servlet.context-path=/api
 
 # Remove whitelabel pages
 server.error.whitelabel.enabled=false
+
+# JWT properties
+jwt.secret=bpFWxtAuCX2trFvwikR1dVqSBVpcS9We
+jwt.jwtExpirationMs=3600000
+
+# OpenAPI Bearer Authorization
+app-version=1.0.0-SNAPSHOT
+app-description=Logging system for tracking and submitting work time
