--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Database
 database.host=localhost
 database.port=3306
-spring.datasource.url=jdbc:mysql://${database.host}:${database.port}/logging_system_db?useSSL=false&createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${database.host}:${database.port}/logging_system_db?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Thisismypassword1!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -12,17 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 # Set base path to /api
-server.servlet.context-path=/api
+spring.data.rest.base-path=/api
 
 # Remove whitelabel pages
 server.error.whitelabel.enabled=false
-
-# JWT properties
-jwt.secret=bpFWxtAuCX2trFvwikR1dVqSBVpcS9We
-jwt.jwtExpirationMs=3600000
-
-# OpenAPI Bearer Authorization
-app-version=1.0.0-SNAPSHOT
-app-description=Logging system for tracking and submitting work time
-
-server.port=8083
