--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ database.host=localhost
 database.port=3306
 spring.datasource.url=jdbc:mysql://${database.host}:${database.port}/logging_system_db?useSSL=false&createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Thisismypassword1!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -24,5 +24,3 @@ jwt.jwtExpirationMs=3600000
 # OpenAPI Bearer Authorization
 app-version=1.0.0-SNAPSHOT
 app-description=Logging system for tracking and submitting work time
-
-server.port=8083
