Added all timesheets page

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.error.whitelabel.enabled=false
 
 # JWT properties
 jwt.secret=bpFWxtAuCX2trFvwikR1dVqSBVpcS9We
-jwt.jwtExpirationMs=3600000
+jwt.jwtExpirationMs=36000000
 
 # OpenAPI Bearer Authorization
 app-version=1.0.0-SNAPSHOT
